--- a/treeview/src/main/res/layout/item_treeview.xml
+++ b/treeview/src/main/res/layout/item_treeview.xml
@@ -12,6 +12,7 @@
         android:layout_width="24dp"
         android:layout_marginLeft="4dp"
         android:layout_height="24dp"
+        android:contentDescription="@null"
         android:src="@drawable/ic_arrow_right" />
 
     <FrameLayout
