--- a/app/src/main/res/layout/activity_crash.xml
+++ b/app/src/main/res/layout/activity_crash.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.FitWindowsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <androidx.appcompat.widget.FitWindowsLinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical">
@@ -44,7 +44,7 @@
             </HorizontalScrollView>
 
         </ScrollView>
-    </androidx.appcompat.widget.FitWindowsLinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab"
@@ -55,4 +55,4 @@
         app:icon="@drawable/ic_content_copy"
         android:text="@string/copy" />
 
-</androidx.appcompat.widget.FitWindowsFrameLayout>
+</FrameLayout>
