--- a/app/src/main/res/layout/fragment_anime_list.xml
+++ b/app/src/main/res/layout/fragment_anime_list.xml
@@ -10,6 +10,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@id/container"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
     >
@@ -68,6 +69,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <include
+        tools:visibility="gone"
         android:id="@+id/load_state_layout"
         layout="@layout/load_state_layout" />
 
