--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_frame">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -16,6 +17,7 @@
             android:layout_width="wrap_content">
 
             <LinearLayout
+                tools:visibility="visible"
                 android:id="@+id/home_content"
                 android:visibility="gone"
                 android:orientation="vertical"
@@ -44,6 +46,7 @@
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <include
+        tools:visibility="gone"
         android:id="@+id/load_state_layout"
         layout="@layout/load_state_layout" />
 </FrameLayout>
