--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -97,6 +98,7 @@
                 android:layout_height="fill_parent" />
         </RelativeLayout>
         <include
+            tools:visibility="gone"
             android:id="@+id/load_state_layout"
             layout="@layout/load_state_layout" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
