--- a/app/src/main/res/layout/fragment_watch_history.xml
+++ b/app/src/main/res/layout/fragment_watch_history.xml
@@ -2,14 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
         <LinearLayout
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:visibility="gone"
             android:orientation="vertical"
-            android:id="@+id/content">
+            android:id="@+id/content"
+            tools:visibility="visible">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_height="match_parent"
@@ -30,6 +32,7 @@
 
 
     <include
+        tools:visibility="gone"
         android:id="@+id/load_state_layout"
         layout="@layout/load_state_layout" />
 
