--- a/app/src/main/res/layout/fragment_collections.xml
+++ b/app/src/main/res/layout/fragment_collections.xml
@@ -31,7 +31,7 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        <com.mrikso.anitube.app.view.CustomSwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
             android:layout_height="match_parent"
             android:layout_width="fill_parent"
@@ -58,7 +58,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp" />
             </LinearLayout>
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        </com.mrikso.anitube.app.view.CustomSwipeRefreshLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <include
