--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_frame">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <com.mrikso.anitube.app.view.CustomSwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -44,7 +44,7 @@
                     layout="@layout/layout_home_new" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </com.mrikso.anitube.app.view.CustomSwipeRefreshLayout>
     <include
         tools:visibility="gone"
         android:id="@+id/load_state_layout"
