--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,7 +27,7 @@
                 app:navigationIcon="@drawable/ic_back" />
 
         </com.google.android.material.appbar.AppBarLayout>
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        <com.mrikso.anitube.app.view.CustomSwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -225,7 +225,7 @@
                 </FrameLayout>
 
             </androidx.core.widget.NestedScrollView>
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        </com.mrikso.anitube.app.view.CustomSwipeRefreshLayout>
     </LinearLayout>
 
 </FrameLayout>
