--- a/app/src/main/res/layout/layout_profile_header.xml
+++ b/app/src/main/res/layout/layout_profile_header.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:paddingEnd="16dp"
@@ -136,7 +137,8 @@
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:textSize="20sp"
-                    android:id="@+id/comments" />
+                    android:id="@+id/comments"
+                    tools:text="999"/>
 
                 <TextView
                     android:layout_height="wrap_content"
@@ -146,7 +148,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:gravity="center_horizontal"
@@ -165,7 +167,7 @@
                     android:textSize="13sp"
                     android:text="@string/profile_comments_rating" />
 
-            </LinearLayout>
+            </LinearLayout>-->
 
         </LinearLayout>
 
