--- a/app/src/main/res/layout/layout_profile_header.xml
+++ b/app/src/main/res/layout/layout_profile_header.xml
@@ -85,7 +85,7 @@
                             android:textSize="20sp"
                             android:textColor="@color/white"
                             android:id="@+id/user_nickname"
-                            android:text="Anonymous" />
+                            tools:text="Anonymous" />
 
                         <LinearLayout
                             android:layout_height="wrap_content"
