--- a/app/src/main/res/layout/custom_controller.xml
+++ b/app/src/main/res/layout/custom_controller.xml
@@ -232,7 +232,8 @@
 				android:layout_height="wrap_content"
 				android:fontFamily="@font/roboto_regular"
 				android:includeFontPadding="false"
-				android:textColor="@color/white" />
+				android:textColor="@color/white"
+				tools:text="00:00" />
 
 			<androidx.media3.ui.DefaultTimeBar
 				android:id="@id/exo_progress"
