--- a/app/src/main/res/layout/item_best_anime.xml
+++ b/app/src/main/res/layout/item_best_anime.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 android:layout_height="wrap_content"
-	 android:layout_width="wrap_content"
-	 android:clickable="true"
-	 android:focusable="true"
-	 app:cardElevation="0dp"
-	 app:cardUseCompatPadding="true"
-	 app:cardBackgroundColor="?attr/colorSurface"
-	 app:cardPreventCornerOverlap="true"
-	 style="?attr/materialCardViewFilledStyle"
-	 >
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="?attr/materialCardViewFilledStyle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    app:cardBackgroundColor="?attr/colorSurface"
+    app:cardElevation="0dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
-	<LinearLayout
-		 android:layout_height="wrap_content"
-		 android:layout_width="match_parent"
-		 android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-		<com.google.android.material.card.MaterialCardView
-			 android:layout_height="158dp"
-			 android:layout_width="114dp"
-			 android:layout_margin="6dp"
-			 app:cardElevation="0dp"
-			 style="?attr/materialCardViewFilledStyle"
-			 app:cardCornerRadius="8dp">
+        <com.google.android.material.card.MaterialCardView
+            style="?attr/materialCardViewFilledStyle"
+            android:layout_width="114dp"
+            android:layout_height="158dp"
+            android:layout_margin="6dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="0dp">
 
-			<RelativeLayout
-				 android:layout_height="match_parent"
-				 android:layout_width="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-				<com.google.android.material.imageview.ShapeableImageView
-					 android:layout_height="match_parent"
-					 android:layout_width="match_parent"
-					 android:scaleType="centerCrop"
-					 app:shapeAppearanceOverlay="@style/CardViewShapeableImageView"
-					 android:id="@+id/siv_poster" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/siv_poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:shapeAppearanceOverlay="@style/CardViewShapeableImageView" />
 
-				<com.google.android.material.progressindicator.CircularProgressIndicator
-					 android:layout_height="wrap_content"
-					 android:layout_width="wrap_content"
-					 android:layout_centerInParent="true"
-					 android:indeterminate="true"
-					 app:indicatorSize="40dp"
-					 app:trackThickness="20dp"
-					 android:id="@+id/progress_indicator" />
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/progress_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:indeterminate="true"
+                    app:indicatorSize="40dp"
+                    app:trackThickness="20dp" />
 
-			</RelativeLayout>
+            </RelativeLayout>
 
-		</com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>
 
-		<TextView
-			 android:layout_height="wrap_content"
-			 android:layout_width="match_parent"
-			 android:ellipsize="end"
-			 android:padding="6dp"
-			 android:fontFamily="sans-serif-condensed-medium"
-			 android:lines="2"
-			 android:elegantTextHeight="false"
-			 android:id="@+id/tv_title" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elegantTextHeight="false"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:lines="2"
+            android:padding="6dp"
+            tools:text="Бліч" />
 
-	</LinearLayout>
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
