--- a/app/src/main/res/layout/layout_home_interesting.xml
+++ b/app/src/main/res/layout/layout_home_interesting.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -9,5 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:nestedScrollingEnabled="false"
-        android:overScrollMode="never" />
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="horizontal"
+        tools:listitem="@layout/item_interesing_anime"/>
 </LinearLayout>
