--- a/app/src/main/res/layout/layout_home_new.xml
+++ b/app/src/main/res/layout/layout_home_new.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_height="wrap_content"
 	android:layout_width="fill_parent"
 	android:orientation="vertical">
-
 
 	<TextView
 		android:layout_height="wrap_content"
@@ -14,11 +14,13 @@
 		android:layout_marginTop="0dp"
 		android:text="@string/home_new_anime" />
 
-
 	<androidx.recyclerview.widget.RecyclerView
 		android:layout_height="wrap_content"
 		android:layout_width="fill_parent"
-		android:id="@+id/new_anime_recycler_view" />
+		android:id="@+id/new_anime_recycler_view"
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+		android:orientation="vertical"
+		tools:listitem="@layout/item_anime_release"/>
 
 	<View
 		android:layout_height="0.5dp"
@@ -26,5 +28,4 @@
 		android:layout_marginEnd="16dp"
 		android:layout_marginTop="16dp"
 		android:layout_marginStart="16dp" />
-
 </LinearLayout>
