--- a/app/src/main/res/layout/layout_new_collections.xml
+++ b/app/src/main/res/layout/layout_new_collections.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_height="wrap_content"
 	android:layout_width="fill_parent"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:orientation="vertical">
 	
 	<LinearLayout
@@ -33,6 +33,9 @@
 	<androidx.recyclerview.widget.RecyclerView
 		android:layout_height="wrap_content"
 		android:layout_width="fill_parent"
-		android:id="@+id/collections_recycler_view" />
+		android:id="@+id/collections_recycler_view"
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+		android:orientation="horizontal"
+		tools:listitem="@layout/item_collection"/>
 
 </LinearLayout>
