--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -1,44 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:animateLayoutChanges="true">
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-          <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/sendMsgPanel">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:liftOnScroll="true"
-            android:id="@+id/app_bar_layout">
+            app:liftOnScroll="true">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
-                android:elevation="0dp"
-                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                app:title="@string/comments"
-                app:navigationIcon="@drawable/ic_back" />
+                android:layout_height="match_parent"
+                android:elevation="0dp"
+                app:navigationIcon="@drawable/ic_back"
+                app:title="@string/comments" />
 
         </com.google.android.material.appbar.AppBarLayout>
+
         <RelativeLayout
             android:id="@+id/content"
-            android:visibility="gone"
-            tools:visibility="visible"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:visibility="gone"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:visibility="visible">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="fill_parent"
+                tools:listitem="@layout/item_comment" />
         </RelativeLayout>
+
         <include
-            tools:visibility="gone"
             android:id="@+id/load_state_layout"
-            layout="@layout/load_state_layout" />
+            layout="@layout/load_state_layout"
+            tools:visibility="gone" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</FrameLayout>
+
+    <include
+        android:id="@id/sendMsgPanel"
+        layout="@layout/layout_bottom_send_comment"
+        tools:visibility="visible"/>
+</RelativeLayout>
