--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -19,7 +20,8 @@
                 android:id="@+id/iv_profile"
                 android:layout_height="60dp"
                 android:layout_width="60dp"
-                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay" />
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
+                tools:src="@drawable/image_no_data"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_username"
@@ -28,7 +30,8 @@
                 android:layout_width="wrap_content"
                 android:paddingStart="5dp"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="User"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_usergroup"
@@ -37,7 +40,8 @@
                 android:layout_toEndOf="@id/iv_profile"
                 android:layout_width="wrap_content"
                 android:paddingStart="5dp"
-                android:textAppearance="?attr/textAppearanceBodyMedium" />
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                tools:text="Admins"/>
 
         </RelativeLayout>
 
@@ -59,7 +63,8 @@
             android:layout_width="match_parent"
 			android:paddingTop="8dp"
 			android:paddingBottom="8dp"
-            android:id="@+id/tv_comment" />
+            android:id="@+id/tv_comment"
+            tools:text="A comment"/>
 
     </LinearLayout>
 
