--- a/app/src/main/res/layout/load_state_layout.xml
+++ b/app/src/main/res/layout/load_state_layout.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/state_frame"
+    android:layout_centerInParent="true"
     android:layout_gravity="center">
 
     <LinearLayout
