--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -83,6 +83,23 @@
         <item name="android:includeFontPadding">false</item>
         <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
+
+    <style name="TextStyle.Medium" parent="TextAppearance.AppCompat.Body1">
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">?attr/colorPrimaryContainer</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="TextStyle.SemiBold" parent="TextAppearance.AppCompat.Body1">
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textColor">?attr/textColorPrimary</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <style
         name="TextLabelAlpha"
         parent="@style/TextLabel">
