--- a/app/src/main/res/layout/fragment_watch.xml
+++ b/app/src/main/res/layout/fragment_watch.xml
@@ -183,7 +183,8 @@
                 android:layout_marginBottom="8dp"
                 android:overScrollMode="never"
                 android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_episode"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
     <include
